manifests/deployment/dd-lampp-development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-lampp-development-blue
  namespace: default
  labels:
    app: dd-lampp-development-blue
    deploy-id: dd-lampp-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dd-lampp-development-blue
  template:
    metadata:
      labels:
        app: dd-lampp-development-blue
        deploy-id: dd-lampp-development
    spec:
      containers:
        - name: dd-lampp-development-blue
          image: underpost/underpost-engine:v3.4.0
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - >
              underpost start --build --run dd-lampp development
          readinessProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4000
              },
              "initialDelaySeconds": 5,
              "periodSeconds": 5,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          livenessProbe:
            {
              "httpGet": {
                "path": "/_internal/health",
                "port": 4000
              },
              "initialDelaySeconds": 30,
              "periodSeconds": 15,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          startupProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4000
              },
              "initialDelaySeconds": 10,
              "periodSeconds": 10,
              "timeoutSeconds": 3,
              "failureThreshold": 180
            }



---
apiVersion: v1
kind: Service
metadata:
  name: dd-lampp-development-blue-service
  namespace: default
spec:
  selector:
    app: dd-lampp-development-blue
  ports:
    - name: 'tcp-4001'
      protocol: TCP
      port: 4001
      targetPort: 4001
    - name: 'udp-4001'
      protocol: UDP
      port: 4001
      targetPort: 4001

    - name: 'tcp-4002'
      protocol: TCP
      port: 4002
      targetPort: 4002
    - name: 'udp-4002'
      protocol: UDP
      port: 4002
      targetPort: 4002

    - name: 'tcp-4003'
      protocol: TCP
      port: 4003
      targetPort: 4003
    - name: 'udp-4003'
      protocol: UDP
      port: 4003
      targetPort: 4003

    - name: 'tcp-4004'
      protocol: TCP
      port: 4004
      targetPort: 4004
    - name: 'udp-4004'
      protocol: UDP
      port: 4004
      targetPort: 4004
  type: LoadBalancer
