manifests/deployment/dd-lampp-development/traffic-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dd-lampp-development-traffic-service
  namespace: default
  labels:
    underpost.net/traffic-service: "true"
    underpost.net/deploy-id: dd-lampp-development
spec:
  type: ClusterIP
  selector:
    app: dd-lampp-development-blue
  ports:
    - name: 'tcp-4001'
      protocol: TCP
      port: 4001
      targetPort: 4001
    - name: 'udp-4001'
      protocol: UDP
      port: 4001
      targetPort: 4001

    - name: 'tcp-4002'
      protocol: TCP
      port: 4002
      targetPort: 4002
    - name: 'udp-4002'
      protocol: UDP
      port: 4002
      targetPort: 4002

    - name: 'tcp-4003'
      protocol: TCP
      port: 4003
      targetPort: 4003
    - name: 'udp-4003'
      protocol: UDP
      port: 4003
      targetPort: 4003

    - name: 'tcp-4004'
      protocol: TCP
      port: 4004
      targetPort: 4004
    - name: 'udp-4004'
      protocol: UDP
      port: 4004
      targetPort: 4004
