manifests/deployment/dd-lampp-development/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www.giancarlobertini.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-lampp-development
      namespace: default
  hostnames:
    - www.giancarlobertini.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-lampp-development-blue-service
          port: 4001
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4001
          weight: 0

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: giancarlobertini.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-lampp-development
      namespace: default
  hostnames:
    - giancarlobertini.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-lampp-development-blue-service
          port: 4002
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4002
          weight: 0

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www.ayleenbertini.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-lampp-development
      namespace: default
  hostnames:
    - www.ayleenbertini.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-lampp-development-blue-service
          port: 4003
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4003
          weight: 0

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ayleenbertini.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-lampp-development
      namespace: default
  hostnames:
    - ayleenbertini.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-lampp-development-blue-service
          port: 4004
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4004
          weight: 0
