manifests/deployment/dd-lampp-development/proxy.yaml

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.giancarlobertini.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.giancarlobertini.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-lampp-development-blue-service
          port: 4001
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4001
          weight: 0
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: giancarlobertini.com
  namespace: default
spec:
  virtualhost:
    fqdn: giancarlobertini.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-lampp-development-blue-service
          port: 4002
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4002
          weight: 0
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.ayleenbertini.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.ayleenbertini.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-lampp-development-blue-service
          port: 4003
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4003
          weight: 0
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ayleenbertini.com
  namespace: default
spec:
  virtualhost:
    fqdn: ayleenbertini.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-lampp-development-blue-service
          port: 4004
          weight: 100
        - name: dd-lampp-development-green-service
          port: 4004
          weight: 0
